validation du version 1

--- a/startup.html
+++ b/startup.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="main-box clearfix">
                     <div class="logo-box pull-left">
-                        <figure class="logo"><a href="index.html"><img src="images/logo-1.jpeg" width="250px" alt="PLC Lab"></a></figure>
+                        <a href="#" class="logo">PLC <span>Lab</span></a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
