--- a/notre-equipe.html
+++ b/notre-equipe.html
@@ -37,8 +37,8 @@
         <div class="outer-container">
             <div class="container">
                 <div class="main-box clearfix">
-                    <div class="logo-box pull-left">
-                        <figure class="logo"><a href="index.html"><img src="images/logo-4.png" alt="PLC Lab"></a></figure>
+                  <div class="logo-box pull-left py-5">
+                        <a href="#" class="logo py-3"><h2>PLC</h2>Lab <span></span></a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -51,13 +51,8 @@
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
                                     <li><a href="index.html">Accueil</a></li> 
-                                    <li class="dropdown"><a href="#">Services</a>
-                                        <ul>
-                                            <li><a href="developpement-web.html">Développement Web</a></li>
-                                            <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
-                                            <li><a href="logiciels-desktop.html">Logiciels Desktop</a></li>
-                                            <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
-                                        </ul>
+                                    <li class="dropdown"><a href="service.html">Services</a>
+                                    
                                     </li>
                                     <li class="dropdown current"><a href="#">À propos</a>
                                         <ul>
@@ -129,7 +124,7 @@
                 <h4>Coordonnées</h4>
                 <ul>
                     <li>Paris, France</li>
-                    <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                     <!-- <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li> -->
                     <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                 </ul>
             </div>
@@ -530,7 +525,7 @@
                             <h4>Coordonnées</h4>
                             <ul>
                                 <li>Paris, France</li>
-                                <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                                 <!-- <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li> -->
                                 <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                             </ul>
                         </div>
