--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="outer-container">
             <div class="container">
                 <div class="main-box clearfix">
-                    <div class="logo-box pull-left">
-                        <a href="#" class="logo">PLC <span>Lab</span></a>
+                    <div class="logo-box pull-left py-5">
+                        <a href="#" class="logo py-3"><h2>PLC</h2>Lab <span></span></a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -51,13 +51,13 @@
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
                                     <li class="current dropdown"><a href="index.html">Accueil</a></li> 
-                                    <li class="dropdown"><a href="#">Services</a>
-                                        <ul>
+                                    <li class="dropdown"><a href="service.html">Services</a>
+                                        <!-- <ul>
                                             <li><a href="developpement-web.html">Développement Web</a></li>
                                             <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
                                             <li><a href="logiciels-desktop.html">Logiciels Desktop</a></li>
                                             <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li class="dropdown"><a href="#">À propos</a>
                                         <ul>
