--- a/service.html
+++ b/service.html
@@ -37,8 +37,8 @@
         <div class="outer-container">
             <div class="container">
                 <div class="main-box clearfix">
-                    <div class="logo-box pull-left">
-                        <figure class="logo"><a href="index.html"><img src="images/logo-4.png" alt="PLC Lab"></a></figure>
+                  <div class="logo-box pull-left py-5">
+                        <a href="#" class="logo py-3"><h2>PLC</h2>Lab <span></span></a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -50,14 +50,11 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li class="current dropdown"><a href="index.html">Accueil</a></li> 
+                                    <li><a href="index.html">Accueil</a></li> 
                                     <li class="dropdown"><a href="#">Services</a>
-                                        <ul>
-                                            <li><a href="developpement-web.html">Développement Web</a></li>
-                                            <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
-                                            <li><a href="logiciels-desktop.html">Logiciels Desktop</a></li>
-                                            <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
-                                        </ul>
+                                      <li class="dropdown"><a href="service.html">Services</a>
+                                    
+                                    </li>
                                     </li>
                                     <li class="dropdown"><a href="#">À propos</a>
                                         <ul>
@@ -73,7 +70,7 @@
                                             <li><a href="etudes-cas.html">Études de Cas</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="blog.html">Blog</a></li>                              
+                                    <li class="current"><a href="blog.html">Blog</a></li>                              
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
@@ -129,7 +126,7 @@
                 <h4>Coordonnées</h4>
                 <ul>
                     <li>Paris, France</li>
-                    <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                     <!-- <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li> -->
                     <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                 </ul>
             </div>
@@ -451,7 +448,7 @@
                             <h4>Coordonnées</h4>
                             <ul>
                                 <li>Paris, France</li>
-                                <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                                 <!-- <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li> -->
                                 <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                             </ul>
                         </div>
