--- a/startup.html
+++ b/startup.html
@@ -52,12 +52,9 @@
                                 <ul class="navigation clearfix">
                                     <li class="current dropdown"><a href="index.html">Accueil</a></li> 
                                     <li class="dropdown"><a href="#">Services</a>
-                                        <ul>
-                                            <li><a href="developpement-web.html">Développement Web</a></li>
-                                            <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
-                                            <li><a href="logiciels-desktop.html">Logiciels Desktop</a></li>
-                                            <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
-                                        </ul>
+                                      <li class="dropdown"><a href="service.html">Services</a>
+                                    
+                                    </li>
                                     </li>
                                     <li class="dropdown"><a href="#">À propos</a>
                                         <ul>
@@ -110,7 +107,7 @@
                 <h4>Coordonnées</h4>
                 <ul>
                     <li>Paris, France</li>
-                    <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                     <!-- <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li> -->
                     <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                 </ul>
             </div>
