--- a/startup.html
+++ b/startup.html
@@ -106,8 +106,8 @@
             <div class="contact-info">
                 <h4>Coordonnées</h4>
                 <ul>
-                    <li>Paris, France</li>
-                     <!-- <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li> -->
+                    <li>Bujumbura , Burundi </li>
+                     <!-- <li><a href="tel:+25761103320">+257 61 10 33 20</a></li> -->
                     <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                 </ul>
             </div>
@@ -424,8 +424,8 @@
                                     <li><h6>Suivez-nous :</h6></li>
                                     <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <!-- <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li> -->
                                 </ul>
                             </div>
                         </div>
@@ -464,10 +464,10 @@
                                 <h4 class="widget-title">Contact</h4>
                                 <div class="widget-content">
                                     <ul class="list clearfix">
-                                        <li><i class="fas fa-map-marker-alt"></i>Paris, France</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Bujumbura , Burundi </li>
                                         <li>
                                             <i class="fas fa-phone-volume"></i>
-                                            <a href="tel:+33123456789">+33 1 23 45 67 89</a>
+                                            <a href="tel:+25761103320">+257 61 10 33 20</a>
                                         </li>
                                         <li>
                                             <i class="fas fa-envelope"></i>
