--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="main-box clearfix">
                     <div class="logo-box pull-left py-5">
-                        <a href="#" class="logo py-3"><h2>PLC</h2>Lab <span></span></a>
+                        <a href="#" class="logo py-3"><h2>PLC Lab</h2> <span></span></a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -51,7 +51,7 @@
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
                                     <li class="current dropdown"><a href="index.html">Accueil</a></li> 
-                                    <li class="dropdown"><a href="service.html">Services</a>
+                                    <li class=""><a href="service.html">Services</a>
                                         <!-- <ul>
                                             <li><a href="developpement-web.html">Développement Web</a></li>
                                             <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
@@ -66,12 +66,12 @@
                                             <li><a href="valeurs.html">Nos Valeurs</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="#">Portfolio</a>
-                                        <ul>
+                                    <li class=""><a href="portfolio.html">Portfolio</a>
+                                        <!-- <ul>
                                             <li><a href="projets-web.html">Projets Web</a></li>
                                             <li><a href="projets-mobiles.html">Applications Mobiles</a></li>
                                             <li><a href="etudes-cas.html">Études de Cas</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="blog.html">Blog</a></li>                              
                                     <li><a href="contact.html">Contact</a></li>
@@ -87,7 +87,9 @@
         <!--sticky Header-->
         <div class="sticky-header">
             <div class="container clearfix">
-                <figure class="logo-box"><a href="index.html"><img src="images/small-logo.png" alt="PLC Lab"></a></figure>
+                <figure class="logo-box"><a href="index.html">
+                    PLC Lab
+                </a></figure>
                 <div class="menu-area">
                     <nav class="main-menu clearfix">
                         <!--Keep This Empty / Menu will come through Javascript-->
@@ -104,13 +106,16 @@
         <div class="close-btn"><i class="fas fa-times"></i></div>
         
         <nav class="menu-box">
-            <div class="nav-logo"><a href="index.html"><img src="images/logo.png" alt="PLC Lab" title="PLC Lab"></a></div>
+            <div class="nav-logo"><a href="index.html">
+                <!-- <img src="images/logo.png" alt="PLC Lab" title="PLC Lab"> -->
+                 PLC lab
+            </a></div>
             <div class="menu-outer"><!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header--></div>
             <div class="contact-info">
                 <h4>Coordonnées</h4>
                 <ul>
-                    <li>Paris, France</li>
-                    <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                    <li>Bujumbura , Burundi </li>
+                    <li><a href="tel:+25761103320">+257 61 10 33 20</a></li>
                     <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                 </ul>
             </div>
@@ -386,7 +391,7 @@
     <!-- subscribe-section end -->
 
     <!-- clients-style-three -->
-    <section class="clients-style-three home-9">
+    <!-- <section class="clients-style-three home-9">
         <div class="container">
             <div class="inner-container">
                 <div class="clients-carousel-2 owl-carousel owl-theme">
@@ -398,7 +403,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- clients-style-three end -->
 
     <!-- main-footer -->
@@ -427,8 +432,8 @@
                                     <li><h6>Suivez-nous :</h6></li>
                                     <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <!--<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li> -->
                                 </ul>
                             </div>
                         </div>
@@ -437,12 +442,12 @@
                                 <h4 class="widget-title">Services</h4>
                                 <div class="widget-content">
                                     <ul class="list clearfix">
-                                        <li><a href="developpement-web.html">Développement Web</a></li>
-                                        <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
-                                        <li><a href="logiciels-desktop.html">Logiciels Desktop</a></li>
-                                        <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
-                                        <li><a href="maintenance-support.html">Maintenance & Support</a></li>
-                                        <li><a href="conseil-technique.html">Conseil Technique</a></li>
+                                        <li><a href="#">Développement Web</a></li>
+                                        <li><a href="#">Applications Mobiles</a></li>
+                                        <li><a href="#">Logiciels Desktop</a></li>
+                                        <li><a href="#">Solutions Cloud</a></li>
+                                        <li><a href="#">Maintenance & Support</a></li>
+                                        <li><a href="#">Conseil Technique</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -457,7 +462,7 @@
                                         <li><a href="portfolio.html">Portfolio</a></li>
                                         <li><a href="blog.html">Blog</a></li>
                                         <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="mentions-legales.html">Mentions légales</a></li>
+                                        <!-- <li><a href="mentions-legales.html">Mentions légales</a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -467,10 +472,10 @@
                                 <h4 class="widget-title">Contact</h4>
                                 <div class="widget-content">
                                     <ul class="list clearfix">
-                                        <li><i class="fas fa-map-marker-alt"></i>Paris, France</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Bujumbura , Burundi </li>
                                         <li>
                                             <i class="fas fa-phone-volume"></i>
-                                            <a href="tel:+33123456789">+33 1 23 45 67 89</a>
+                                            <a href="tel:+25761103320">+257 61 10 33 20</a>
                                         </li>
                                         <li>
                                             <i class="fas fa-envelope"></i>
