--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet"> -->
 
 <!-- Stylesheets -->
 <link href="css/font-awesome-all.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 <body class="boxed_wrapper">
 
     <!-- preloader -->
-    <div class="preloader"></div>
+    <!-- <div class="preloader"></div> -->
     <!-- preloader -->
 
     <!-- main header -->
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="main-box clearfix">
                   <div class="logo-box pull-left py-5">
-                        <a href="#" class="logo py-3"><h2>PLC</h2>Lab <span></span></a>
+                        <a href="#" class="logo py-3"><h2>PLC Lab</h2> <span></span></a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -125,8 +125,8 @@
             <div class="contact-info">
                 <h4>Coordonnées</h4>
                 <ul>
-                    <li>Paris, France</li>
-                     <!-- <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li> -->
+                    <li>Bujumbura , Burundi </li>
+                     <!-- <li><a href="tel:+25761103320">+257 61 10 33 20</a></li> -->
                     <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                 </ul>
             </div>
@@ -444,8 +444,8 @@
                                 <ul class="social-links clearfix">
                                     <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
+                                    <!-- <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li> -->
                                 </ul>
                             </div>
                         </div>
@@ -467,8 +467,8 @@
                                 <h4 class="widget-title">Contact</h4>
                                 <div class="widget-content">
                                     <ul class="contact-info clearfix">
-                                        <li><i class="fas fa-map-marker-alt"></i> Paris, France</li>
-                                        <li><i class="fas fa-phone"></i><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                                        <li><i class="fas fa-map-marker-alt"></i> Bujumbura , Burundi </li>
+                                        <li><i class="fas fa-phone"></i><a href="tel:+25761103320">+257 61 10 33 20</a></li>
                                         <li><i class="fas fa-envelope"></i><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
                                     </ul>
                                 </div>
@@ -508,7 +508,6 @@
     <span class="fa fa-arrow-up"></span>
 </button>
 
-<!-- jequery plugins -->
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -523,7 +522,6 @@
 <script src="js/nav-tool.js"></script>
 <script src="js/jquery.paroller.min.js"></script>
 <script src="js/tilt.jquery.js"></script>
-<script src="js/isotope.js"></script>
 
 <!-- main-js -->
 <script src="js/script.js"></script>
